docker-compose/templates/flask-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -c
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: flask-api
  name: flask-api
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: flask-api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -c
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: flask-api
    spec:
      containers:
      - env:
        - name: DB_URL
          value: postgresql://postgres:postgres@postgres-db:5432/postgres
        image: 1047473086961/api:1.0
        imagePullPolicy: IfNotPresent
        name: flask-api
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
