docker-compose/templates/flask-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: flask-api
  name: flask-api
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 5000
  selector:
    io.kompose.service: flask-api
