docker-compose/templates/postgres-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: postgres-db
  name: postgres-db
spec:
  type: NodePort
  ports:
  - port: 5432
    NodePort: 30001
  selector:
    io.kompose.service: postgres-db
status:
  loadBalancer: {}
